# sos-club-hub

./: .gitignore  ReadMe.md
backend/: CMakeLists.txt
backend/include/: auth_service.h  database_manager.h  http_response.h  quest_service.h  router.h  server.h  sha256.h  user.h
backend/src/: auth_service.cpp  database_manager.cpp  http_response.cpp  main.cpp  quest_service.cpp  router.cpp  server.cpp  sha256.cpp  user.cpp
docs/: sos-recruitment-page-design.md
docs/design/: 03-quest-board-design.md
docs/features/: 01-daily-checkin.md  02-character-affection.md  03-quest-board.md  04-danmaku-wall.md  05-achievement-badges.md  06-bgm-player.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.js  quests.js
frontend/src/components/quests/: BrainstormModal.vue  ConfettiCanvas.vue  HaruhiCongratsModal.vue  QuestCard.vue  QuestClaimModal.vue
frontend/src/components/sos/: MemberCard.vue  MemberModal.vue
frontend/src/layouts/: AuthLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  quests.js
frontend/src/views/: Demo.vue  ForgotPassword.vue  Login.vue  QuestBoard.vue  Register.vue  SosRecruit.vue  TsuruyaShop.vue
